--- a/scripts/conf/teste.html
+++ b/scripts/conf/teste.html
@@ -1,22 +1,31 @@
 <!--  
-Modificado por: Robson Vaamonde
-Site: www.procedimentosemti.com.br
-Facebook: facebook.com/ProcedimentosEmTI
-Facebook: facebook.com/BoraParaPratica
-YouTube: youtube.com/BoraParaPratica
-Data de criação: 04/11/2018
-Data de atualização: 20/03/2021
-Versão: 0.04
-Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-Kernel >= 4.15.x
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 15/10/2021
+# Data de atualização: 15/10/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 -->
 <!DOCTYPE html>
 	<html lang="pt-br">
 		<head>
-			<title>Título da página</title>
+			<title>Teste da Linguagem HTML</title>
 			<meta charset="utf-8">
 		</head>
 		<body>
-			<h1>Teste da Linguagem HTML (HyperText Markup Language)</h1>.
+			<h1>Teste da Linguagem HTML (HyperText Markup Language)</h1>
+			Autor: Robson Vaamonde<br>
+			Linkedin: <a href="https://www.linkedin.com/in/robson-vaamonde-0b029028/">Robson Vaamonde</a><br>
+			Site: <a href="procedimentosemti.com.br">procedimentosemti.com.br</a><br>
+			Facebook: <a href="facebook.com/ProcedimentosEmTI"> Procedimentos Em TI</a><br>
+			Facebook: <a href="facebook.com/BoraParaPratica">Bora Para Pratica</a><br>
+			Instagram: <a href="https://www.instagram.com/procedimentoem/?hl=pt-br">Procedimentos Em TI</a><br>
+			YouTube: <a href="youtube.com/BoraParaPratica">Bora Para Pratica</a><br>
+			Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 		</body>
 	</html>
