--- a/scripts/conf/lamp/formpost.html
+++ b/scripts/conf/lamp/formpost.html
@@ -17,8 +17,9 @@
 			<title>Teste de Formulário em HTTP e HTTPS</title>
 			<meta charset="utf-8">
 		</head>
-		<body>
-			<h1>SE USUÁRIO E SENHA ACABA DE SER HACKEADO!!!!!!!</h1>
+		<body onLoad="validar()">
+			<input type="text" id="teste">
+			<h1>O SE USUÁRIO E SENHA ACABA DE SER HACKEADO!!!!!!!</h1>
 			<hr>
 			Autor: Robson Vaamonde<br>
 			Linkedin: <a href="https://www.linkedin.com/in/robson-vaamonde-0b029028/">Robson Vaamonde</a><br>
@@ -28,5 +29,6 @@
 			Instagram: <a href="https://www.instagram.com/procedimentoem/?hl=pt-br">Procedimentos Em TI</a><br>
 			YouTube: <a href="youtube.com/BoraParaPratica">Bora Para Pratica</a><br>
 			Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+			<script src="validador.js"></script>
 		</body>
 	</html>
