--- a/scripts/conf/lamp/formulario.html
+++ b/scripts/conf/lamp/formulario.html
@@ -10,6 +10,7 @@
 # Data de atualização: 14/12/2021
 # Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Apache2 v2.4.x
 -->
 <!DOCTYPE html>
 	<html lang="pt-br">
