--- a/scripts/conf/lamp/teste.html
+++ b/scripts/conf/lamp/teste.html
@@ -28,5 +28,6 @@
 			Instagram: <a href="https://www.instagram.com/procedimentoem/?hl=pt-br">Procedimentos Em TI</a><br>
 			YouTube: <a href="youtube.com/BoraParaPratica">Bora Para Pratica</a><br>
 			Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+			IMPORTANTE: Essa "PÁGINA" precisa "ESTÁ" com a "ACENTUAÇÃO" correta (UTF-8)
 		</body>
 	</html>
