--- a/scripts/conf/lamp/teste.html
+++ b/scripts/conf/lamp/teste.html
@@ -7,8 +7,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 15/10/2021
-# Data de atualização: 15/10/2021
-# Versão: 0.01
+# Data de atualização: 09/04/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
 -->
@@ -27,7 +27,7 @@
 			Facebook: <a href="facebook.com/BoraParaPratica">Bora Para Pratica</a><br>
 			Instagram: <a href="https://www.instagram.com/procedimentoem/?hl=pt-br">Procedimentos Em TI</a><br>
 			YouTube: <a href="youtube.com/BoraParaPratica">Bora Para Pratica</a><br>
-			Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-			IMPORTANTE: Essa "PÁGINA" precisa "ESTÁ" com a "ACENTUAÇÃO" correta (UTF-8)
+			Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x<br>
+			IMPORTANTE: Essa "PÁGINA" precisa "ESTÁ" com "ACENTUAÇÃO" correta do (UTF-8).
 		</body>
 	</html>
